# waybar-helpers

./: .gitignore  CMakeLists.txt  PKGBUILD  nwc-waybar-current-user.cpp
archpkg/: PKGBUILD
nwc/: utility.cpp  utility.hpp
src/nwc/: arguments.cpp  arguments.hpp  duration-to-string.hpp  fmt-map.cpp  fmt-map.hpp
src/nwc-waybar-current-user/: CMakeLists.txt  nwc-waybar-current-user.cpp
src/nwc-waybar-memory/: CMakeLists.txt  nwc-waybar-memory.cpp
